<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/act_pwd_certify_hint"
            android:textColor="@color/gray_666666"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:ems="4"
                android:text="@string/ui_comm_txt_vcode"
                android:textColor="@color/black_333333" />

            <EditText
                android:id="@+id/et_certify_code"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/tv_left"
                android:layout_weight="1"
                android:background="@drawable/sp_ed_bg"
                android:paddingLeft="10dp" />

            <com.minjinsuo.zhongchou.widget.TimeButton
                android:id="@+id/btn_vfcode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_shape_whitered"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="4"
                android:text="@string/ui_comm_txt_newPwd"
                android:textColor="@color/black_333333" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sp_ed_bg"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_newpw"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/sp_ed_bg"
                    android:digits="@string/passworddigits"
                    android:hint="@string/ui_comm_et_newPwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivEye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:src="@drawable/eye_n" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="4"
                android:text="@string/ui_comm_txt_confirmPwd"
                android:textColor="@color/black_333333" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sp_ed_bg"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_newpw_confirm"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:digits="@string/passworddigits"
                    android:hint="@string/ui_comm_et_confirmPwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivEye2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:src="@drawable/eye_n" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_next_certify"
            style="@style/BtnStyleDrawable"
            android:layout_marginTop="10dp"
            android:text="@string/ui_comm_txt_complete" />
    </LinearLayout>

</LinearLayout>